[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-python-dateutil>=2.9.0.20260508",
]
